# docnote_py

./: .gitignore  Dockerfile  README.md  pyproject.toml
docnote_py/: __main__.py
docnote_py/app/: logger.py  model.py
